deploy/kustomize/overlays/baseline-istio-custom/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactive-mesh-grpc
  namespace: reactive-mesh-authz
spec:
  hosts:
    - "*"
  gateways:
    - reactive-mesh-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grpc-server.reactive-mesh-authz.svc.cluster.local
            port:
              number: 50051
